--- a/ThreeProgramPerWeek/ThreeProgramPerWeek.vcxproj.filters
+++ b/ThreeProgramPerWeek/ThreeProgramPerWeek.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Parking.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="line.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
