--- a/ThreeProgramPerWeek/ThreeProgramPerWeek.vcxproj.filters
+++ b/ThreeProgramPerWeek/ThreeProgramPerWeek.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="line.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Factor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
